Cleanup and Details added to the Domain

--- a/Onyx/Onyx.Cartographer.Tests/Onyx.Cartographer.Tests.csproj
+++ b/Onyx/Onyx.Cartographer.Tests/Onyx.Cartographer.Tests.csproj
@@ -88,6 +88,15 @@
   <ItemGroup>
     <Content Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Onyx.Cartographer\Onyx.Cartographer.csproj">
+      <Project>{1F4D3FA0-61D7-488B-A51B-A8EAEB153F42}</Project>
+      <Name>Onyx.Cartographer</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
