--- a/Onyx/Onyx.Domain.Tests/Onyx.Domain.Tests.csproj
+++ b/Onyx/Onyx.Domain.Tests/Onyx.Domain.Tests.csproj
@@ -108,7 +108,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Controllers\ValuesControllerTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App.config" />
@@ -121,6 +120,9 @@
       <Project>{30432180-1B8B-4833-B25E-72368E2C63AF}</Project>
       <Name>Onyx.Domain</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Controllers\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
