--- a/Onyx/Onyx.Cartographer/Onyx.Cartographer.csproj
+++ b/Onyx/Onyx.Cartographer/Onyx.Cartographer.csproj
@@ -113,6 +113,8 @@
     <Content Include="Content\application.css" />
     <Content Include="Content\pages\_sidebar.scss" />
     <None Include="Content\pages\_home.scss" />
+    <Content Include="Content\pages\_scrollable_content.scss" />
+    <Content Include="Content\shared\_css_fixes.scss" />
     <None Include="Content\shared\_fonts.scss" />
     <None Include="Content\pages\_base.scss" />
     <None Include="Content\shared\_tags.scss" />
@@ -121,7 +123,10 @@
     <Content Include="Global.asax" />
     <Content Include="img\glyphicons-halflings-white.png" />
     <Content Include="img\glyphicons-halflings.png" />
+    <Content Include="img\logos\sidebar-logo%402x.png" />
+    <Content Include="img\logos\sidebar-logo.png" />
     <Content Include="partials\partial1.html" />
+    <Content Include="partials\partial2.html" />
     <Content Include="Scripts\angular.js" />
     <Content Include="Scripts\angular.min.js" />
     <Content Include="Scripts\app\app.js" />
@@ -135,6 +140,7 @@
     <Content Include="Scripts\jquery-1.8.2.js" />
     <Content Include="Scripts\jquery-1.8.2.min.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
+    <Content Include="Scripts\util\misc.js" />
     <Content Include="Scripts\_references.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
