--- a/Onyx/Onyx.Cartographer/Web.config
+++ b/Onyx/Onyx.Cartographer/Web.config
@@ -28,6 +28,13 @@
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
+	  <httpProtocol>
+		  <customHeaders>
+			  <clear />
+			  <add name="Access-Control-Allow-Origin" value="*" />
+			  <add name="Access-Control-Allow-Headers" value="Origin, X-Requested-With, Content-Type, Accept" />
+		  </customHeaders>
+	  </httpProtocol>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
