--- a/Onyx/Onyx.Domain/Web.config
+++ b/Onyx/Onyx.Domain/Web.config
@@ -28,6 +28,13 @@
     </pages>
   </system.web>
   <system.webServer>
+	<httpProtocol>
+	  <customHeaders>
+	    <clear />
+		  <add name="Access-Control-Allow-Origin" value="*" />
+		  <add name="Access-Control-Allow-Headers" value="Origin, X-Requested-With, Content-Type, Accept" />
+	  </customHeaders>
+	</httpProtocol>
     <validation validateIntegratedModeConfiguration="false" />
     <handlers>
       <remove name="ExtensionlessUrlHandler-ISAPI-4.0_32bit" />
