--- a/Onyx/Onyx.Domain/packages.config
+++ b/Onyx/Onyx.Domain/packages.config
@@ -15,6 +15,7 @@
   <package id="Microsoft.AspNet.WebPages" version="3.0.0-beta1" targetFramework="net45" />
   <package id="Microsoft.Data.Edm" version="5.5.0-alpha2" targetFramework="net45" />
   <package id="Microsoft.Data.OData" version="5.5.0-alpha2" targetFramework="net45" />
+  <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net45" />
