fixes for initial web push test

--- a/Onyx/Onyx.Cartographer/Onyx.Cartographer.csproj
+++ b/Onyx/Onyx.Cartographer/Onyx.Cartographer.csproj
@@ -154,11 +154,13 @@
     <Content Include="Scripts\app\app.js" />
     <None Include="Content\shared\_colours.scss" />
     <None Include="Content\application.scss" />
+    <None Include="Properties\PublishProfiles\Default Settings.pubxml" />
     <None Include="Scripts\jquery-1.8.2.intellisense.js" />
     <Content Include="Scripts\app\controllers.js" />
     <Content Include="Scripts\app\directives.js" />
     <Content Include="Scripts\app\filters.js" />
     <Content Include="Scripts\app\services.js" />
+    <Content Include="Scripts\cartographer\cartographer.js" />
     <Content Include="Scripts\cartographer\cartographer.ts" />
     <Content Include="Content\ide\codemirror.css" />
     <Content Include="Scripts\ide\addons\active-line.js" />
@@ -187,13 +189,18 @@
     <Content Include="Scripts\jquery-1.8.2.js" />
     <Content Include="Scripts\jquery-1.8.2.min.js" />
     <Content Include="Scripts\jquery-1.8.2.d.ts" />
+    <Content Include="Scripts\libs\xdm.js" />
     <Content Include="Scripts\libs\xdm.ts" />
     <Content Include="Scripts\libs\XboxInternals.d.ts" />
     <Content Include="Scripts\libs\XboxInternals.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
+    <Content Include="Scripts\stor\data_storage.js" />
+    <Content Include="Scripts\stor\data_storage.ts" />
     <Content Include="Scripts\util\functions.js" />
+    <Content Include="Scripts\util\mask_manager.js" />
     <Content Include="Scripts\util\mask_manager.ts" />
     <Content Include="Scripts\util\misc.js" />
+    <Content Include="Scripts\util\modal_manager.js" />
     <Content Include="Scripts\util\modal_manager.ts" />
     <Content Include="Scripts\_references.js" />
     <Content Include="AngularViews\About\index.html" />
