--- a/Onyx/Onyx.Cartographer/Onyx.Cartographer.csproj
+++ b/Onyx/Onyx.Cartographer/Onyx.Cartographer.csproj
@@ -131,12 +131,18 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="AngularViews\Create\modify.html" />
-    <Content Include="Content\application.css" />
+    <Content Include="Content\application.css">
+      <DependentUpon>application.scss</DependentUpon>
+    </Content>
     <Content Include="Content\ide\dialog.css" />
     <Content Include="Content\ide\theme\onyx.css" />
+    <Content Include="Content\pages\about\index.css">
+      <DependentUpon>_index.scss</DependentUpon>
+    </Content>
     <Content Include="Content\pages\_sidebar.scss" />
     <Content Include="Content\pages\create\_index.scss" />
     <Content Include="Content\pages\create\_modify.scss" />
+    <Content Include="Content\pages\about\_index.scss" />
     <None Include="Content\pages\_home.scss" />
     <Content Include="Content\pages\_scrollable_content.scss" />
     <Content Include="Content\shared\_css_fixes.scss" />
@@ -150,8 +156,6 @@
     <Content Include="Global.asax" />
     <Content Include="img\animated\loading-dark.gif" />
     <Content Include="img\animated\loading-white.gif" />
-    <Content Include="img\glyphicons-halflings-white.png" />
-    <Content Include="img\glyphicons-halflings.png" />
     <Content Include="img\logos\logo-base%402x.png" />
     <Content Include="img\logos\logo-base.png" />
     <Content Include="img\logos\sidebar-logo%402x.png" />
