--- a/Onyx/Onyx.Cartographer/Onyx.Cartographer.csproj
+++ b/Onyx/Onyx.Cartographer/Onyx.Cartographer.csproj
@@ -213,19 +213,19 @@
     <Content Include="Scripts\ide\mode\wumboscript.js" />
     <Content Include="Scripts\jquery-1.8.2.d.ts" />
     <Content Include="Scripts\jquery-1.8.2.js" />
+    <Content Include="Scripts\libs\xbox_internals\rsa.js" />
     <Content Include="Scripts\util\events.js" />
     <Content Include="Scripts\util\events.ts" />
-    <Content Include="Scripts\libs\xdm.js" />
-    <Content Include="Scripts\libs\xdm.ts" />
-    <Content Include="Scripts\libs\XboxInternals.d.ts" />
-    <Content Include="Scripts\libs\XboxInternals.js" />
+    <Content Include="Scripts\libs\xdm\xdm.js" />
+    <Content Include="Scripts\libs\xdm\xdm.ts" />
+    <Content Include="Scripts\libs\xbox_internals\XboxInternals.d.ts" />
+    <Content Include="Scripts\libs\xbox_internals\XboxInternals.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\stor\data_storage.js" />
     <Content Include="Scripts\stor\data_storage.ts" />
     <Content Include="Scripts\util\functions.js" />
     <Content Include="Scripts\util\mask_manager.js" />
     <Content Include="Scripts\util\mask_manager.ts" />
-    <Content Include="Scripts\util\misc.js" />
     <Content Include="Scripts\util\modal_manager.js" />
     <Content Include="Scripts\util\modal_manager.ts" />
     <Content Include="Scripts\_references.js" />
@@ -247,7 +247,7 @@
     <Content Include="Views\Featured\Index.cshtml" />
     <Content Include="Views\Error\Index.cshtml" />
     <Content Include="Scripts\cartographer\cartographer.js.map" />
-    <Content Include="Scripts\libs\xdm.js.map" />
+    <Content Include="Scripts\libs\xdm\xdm.js.map" />
     <Content Include="Scripts\stor\data_storage.js.map" />
     <Content Include="Scripts\util\events.js.map" />
     <Content Include="Scripts\util\mask_manager.js.map" />
