--- a/Onyx/Onyx.Cartographer/Onyx.Cartographer.csproj
+++ b/Onyx/Onyx.Cartographer/Onyx.Cartographer.csproj
@@ -137,7 +137,6 @@
     <Compile Include="Server\DomainConnector.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="AngularViews\Create\modify.html" />
     <Content Include="Content\application.css">
       <DependentUpon>application.scss</DependentUpon>
     </Content>
@@ -260,6 +259,7 @@
     <Content Include="Views\About\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="AngularViews\" />
     <Folder Include="App_Data\" />
     <Folder Include="Content\lib\" />
     <Folder Include="img\metro\" />
