--- a/Onyx/Onyx.Cartographer/Web.config
+++ b/Onyx/Onyx.Cartographer/Web.config
@@ -19,6 +19,7 @@
     <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=onyx_development;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\onyx_development.mdf" />
   </connectionStrings>
   <system.web>
+    <sessionState timeout="2880" />
     <customErrors mode="Off" />
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
