added a max-file-upload size of around 512kb.

--- a/Onyx/Onyx.Cartographer/Web.config
+++ b/Onyx/Onyx.Cartographer/Web.config
@@ -22,7 +22,7 @@
     <sessionState timeout="2880" />
     <customErrors mode="Off" />
     <compilation debug="true" targetFramework="4.5" />
-    <httpRuntime targetFramework="4.5" />
+    <httpRuntime targetFramework="4.5" executionTimeout="60" maxRequestLength="512" />
     <pages>
       <namespaces>
         <add namespace="System.Web.Helpers" />
